# vigi

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  main.py  pylint_report.txt  pyproject.toml  requirements.txt  vigi.ini
.github/workflows/: python-app.yml
agent/: README.md  agent.py  main.py  requirements.txt  test_yolo.py  vigi.ini
agent/static/: style.css
agent/templates/: index.html  layout.html
agent/tests/: test_motion_detector.py  test_pub_sub.py  test_spatial.py
agent/vigi_agent/: app.py  camera_monitor.py  context_processors.py  drawing.py  main.py  motion_detector.py  notifier.py  pub_sub.py  video_recorder.py
docs/: IDEA_PITCHING.md  IDEA_PITCHING_VIDEO_SCENARIO.md  PRELIMINARY_REPORT.md  configuration.md  motion_detection_demo.py  notifications.md
scripts/: cpu_mem_profiler.py  generate_password.py  motion_detection_demo.py  yolo_demo.py
tests/: test_context_processors.py  test_email_notification_provider.py  test_fps_calulator.py  test_media.py  test_motion_detector.py  test_pub_sub.py  test_sms_notification_provider.py  test_spatial.py
vigi/: __init__.py  app.py  auth.py  cache.py  camera_config.py  camera_monitor.py  cli.py  configuration_manager.py  context_processors.py  database.py  motion_detector.py  notifier.py  video_recorder.py
vigi/notification_providers/: email_notification_provider.py  sms_notification_provider.py
vigi_agent/: agent_config.py  cache.py  camera_monitor.py  cli.py  configuration_manager.py  context_processors.py  database.py  motion_detector.py  video_recorder.py
(+40 files in other folders)
